<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <SlidingDrawer
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/content"
            android:padding="21dp"
            android:orientation="vertical"
            android:background="#77000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/leh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leh" />

            <CheckBox
                android:id="@+id/geh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geh" />

            <CheckBox 
                android:id="@+id/reseller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reseller" />

            <CheckBox 
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi" />

            <CheckBox 
                android:id="@+id/gastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gastro" />

            <CheckBox 
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor" />

            <CheckBox 
                android:id="@+id/webshop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webshop" />

            <CheckBox 
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events" />
        </LinearLayout>
    </SlidingDrawer>

</FrameLayout>